apps/vikunja/vikunja-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vikunja
  namespace: vikunja
  labels:
    app: vikunja
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vikunja
  template:
    metadata:
      labels:
        app: vikunja
    spec:
      containers:
      - name: vikunja
        image: vikunja/vikunja:latest
        ports:
        - containerPort: 3456
        volumeMounts:
        - mountPath: /app/vikunja/files
          name: files-storage
        - mountPath: /etc/vikunja/config.yml
          name: vikunja-config-volume
          subPath: config.yml
      volumes:
      - name: vikunja-config-volume
        configMap:
          name: vikunja-config
      - name: files-storage
        persistentVolumeClaim:
          claimName: vikunja-files
